--- a/index.html
+++ b/index.html
@@ -32,11 +32,16 @@
             <li><a href="#about" onclick="toggleMenu()">About</a></li>
             <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
             <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
+            <li><a href="#skills" onclick="toggleMenu()">Skills</a></li>
             <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
           </div>
         </div>
       </nav>
-
+      <section id="profile">
+        <div class="selction_pic_container">
+          <img src="./assets/profile2.png" alt="nithies kumar profile "/>
+        </div>
+      </section>
     <script src="script.js"></script>
 </body>
 </html>
