--- a/index.html
+++ b/index.html
@@ -41,6 +41,15 @@
         <div class="selction_pic_container">
           <img src="./assets/profile2.png" alt="nithies kumar profile "/>
         </div>
+        <div class="section_text">
+          <p class="section_text_p1">Hello, I'm</p>
+          <h1 class="title">Nithies Kumar</h1>
+          <p class="section_text_p2">Frontend Developer</p>
+          <div class="btn_container">
+            <button class="btn btn-color-2" onclick="window.open('./assets/resume.pdf')">Download CV</button>
+            <button class="btn btn-color-1" onclick="location.href('./#contact')">Contact Info</button>
+          </div>
+        </div>
       </section>
     <script src="script.js"></script>
 </body>
