--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </nav>
       <section id="profile">
         <div class="selction_pic_container">
-          <img src="./assets/profile2.png" alt="nithies kumar profile "/>
+          <img src="./assets/profile2.png" id="l1"alt="nithies kumar profile "/>
         </div>
         <div class="section_text">
           <p class="section_text_p1">Hello, I'm</p>
@@ -47,7 +47,41 @@
           <p class="section_text_p2">Frontend Developer</p>
           <div class="btn_container">
             <button class="btn btn-color-2" onclick="window.open('./assets/resume.pdf')">Download CV</button>
-            <button class="btn btn-color-1" onclick="location.href('./#contact')">Contact Info</button>
+            <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Info</button>
+          </div>
+          <div id="socials-container">
+            <img src="./assets/linkedin.png" alt="Myllinkedin profile" class="icon" onclick="location.href='https://linkedin.com/'"/>
+            <img src="./assets/github.png" alt="Mygithub profile" class="icon" onclick="location.href='https://github.com/'"/>
+            <img src="./assets/hackerrank.png" alt="Myhackerrank profile" class="icon" id="l1" onclick="location.href='https://hackerrank.com/'"/>
+            <img src="./assets/leetcode.png" alt="MyLeetcode profile" class="icon" id="l1" onclick="location.href='https://leetcode.com/'"/>
+          </div>
+        </div>
+      </section>
+      <section id="about">
+        <p class="section_text_p1">Get To Know More</p>
+        <h1 class="title">About Me</h1>
+        <div class="section-container">
+          <div class="selction_pic_container">
+            <img src="./assets/about-pic.png" id="l3"alt="profile image" class="about-pic"/>
+          </div>
+          <div class="about-details-container">
+             <div class="about-containers">
+              <div class="details-container">
+                <img src="./assets/experience.png"
+                alt="Experience icon"
+                class="icon"/>
+                <h3>Experience</h3>
+                <p>1+ years<br/> Frontend Development</p>
+              </div>
+              <div class="details-container">
+                <img src="./assets/education.png"
+                alt="Education icon"
+                class="icon"/>
+                <h3>Education</h3>
+                <p>B.E in Computer Science </p>
+              </div>
+             </div>
+             
           </div>
         </div>
       </section>
